Fix: Add centralized environment configuration for production deployment
CRITICAL PRODUCTION FIX for "Missing Supabase environment variables" error

Problem:
--------
The application deployed to Vercel shows "Missing Supabase environment variables"
error even though environment variables are set in Vercel project settings.

Root Cause:
-----------
Next.js requires NEXT_PUBLIC_* environment variables to be inlined at BUILD time,
not just available at runtime. The lazy initialization pattern in the original
Supabase client was not correctly accessing these variables in all contexts
(client-side, server-side, edge runtime).

Solution:
---------
1. Created centralized environment configuration module (/src/lib/env.ts)
   - Type-safe access to all environment variables
   - Runtime validation with detailed error messages
   - Works in browser, server, and edge runtime contexts

2. Updated all Supabase clients to use centralized configuration
   - /src/lib/supabase/client.ts - Browser/client-side client
   - /src/lib/supabase/server.ts - Server-side client
   - /src/middleware.ts - Edge runtime middleware

3. Added build-time environment variable validation
   - Created /scripts/verify-env.js for pre-build validation
   - Updated package.json build script to run validation
   - Build fails early if variables are missing

4. Updated Next.js configuration
   - Explicitly expose environment variables via env config
   - Keep console.error/warn/info in production for debugging
   - Ensures variables are available in client bundle

Files Modified:
---------------
NEW:
- /src/lib/env.ts - Centralized environment configuration
- /scripts/verify-env.js - Build-time environment validation
- /ENV_FIX_DEPLOYMENT_GUIDE.md - Comprehensive deployment guide

UPDATED:
- /src/lib/supabase/client.ts - Use centralized env module
- /src/lib/supabase/server.ts - Use centralized env module
- /src/middleware.ts - Enhanced error logging for edge runtime
- /next.config.js - Explicit env exposure,

--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "node scripts/verify-env.js && next build",
+    "build:skip-check": "next build",
     "start": "next start",
     "lint": "next lint",
-    "seed": "node scripts/seed-supabase.js"
+    "seed": "node scripts/seed-supabase.js",
+    "verify-env": "node scripts/verify-env.js"
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
